modification du titre

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 23e8d475-d98b-4cb8-8630-6921ea1c27dc
-name: 'Déploiement (local)'
+name: 'Déploiement (premier déploiement)'
 mail: romain.dortier@gmail.com
 slogan: ''
 page:
