--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,5 @@
 module:
+  admin_toolbar: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -8,22 +9,21 @@ module:
   color: 0
   comment: 0
   config: 0
+  config_filter: 0
+  config_split: 0
   contact: 0
   contextual: 0
   datetime: 0
   dblog: 0
-  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
-  field_ui: 0
   file: 0
   filter: 0
   help: 0
   history: 0
   image: 0
   link: 0
-  menu_ui: 0
   node: 0
   options: 0
   page_cache: 0
@@ -38,7 +38,6 @@ module:
   toolbar: 0
   tour: 0
   user: 0
-  views_ui: 0
   menu_link_content: 1
   views: 10
   standard: 1000
