--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
         "drush/drush": "^9.3",
-        "drupal/admin_toolbar": "^1.24"
+        "drupal/admin_toolbar": "^1.24",
+        "drupal/webform": "^5.0@RC"
     },
     "replace": {
         "drupal/core": "^8.5"
